# trello-mcp

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/trello_mcp/: __init__.py  cli.py  client.py  models.py  server.py
src/trello_mcp/resources/: api_introduction.md  authorization.md  custom_fields.md  limits.md  nested_resources.md  object_definitions.md  rate_limits.md  status_codes.md
tests/: conftest.py
tests/integration/: test_server.py
tests/unit/: test_client.py  test_models.py
