[project]
name = "trello-mcp"
version = "0.1.0"
description = "MCP server exposing Trello operations as tools"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "José F. González" }]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "click>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/concongo/trello-mcp"
Repository = "https://github.com/concongo/trello-mcp"
Issues = "https://github.com/concongo/trello-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "pre-commit>=4.0.0",
    "respx>=0.22.0",
]

[project.scripts]
trello-mcp = "trello_mcp.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trello_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.coverage.run]
source = ["trello_mcp"]

[tool.coverage.report]
fail_under = 80
